# Loopal

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  Cargo.toml  LICENSE  LOOPAL.md  MODULE.bazel  Makefile  README.md  README.zh-CN.md  deny.toml  loopal-20260330-042301.loopal-opus46.json
crates/loopal-acp/: BUILD.bazel  Cargo.toml
crates/loopal-acp/src/: handler.rs  handler_prompt.rs  handler_session.rs  jsonrpc.rs  lib.rs  translate.rs
crates/loopal-acp/src/adapter/: control.rs  events.rs  lifecycle.rs  mod.rs  permission.rs  prompt.rs  session.rs
crates/loopal-acp/src/translate/: ext.rs  messages.rs  mod.rs  tool_kind.rs  tools.rs
crates/loopal-acp/src/types/: convert.rs  mod.rs
crates/loopal-acp/tests/: suite.rs
crates/loopal-acp/tests/suite/: e2e_alignment_test.rs  e2e_cancel_test.rs  e2e_control_test.rs  e2e_edge_test.rs  e2e_error_test.rs  e2e_harness.rs  e2e_lifecycle_test.rs  e2e_multi_test.rs  e2e_new_methods_test.rs  e2e_protocol_test.rs  e2e_session_test.rs  e2e_thinking_test.rs
crates/loopal-agent/: BUILD.bazel  Cargo.toml
crates/loopal-agent-client/: BUILD.bazel  Cargo.toml
crates/loopal-agent-client/src/: bridge.rs  bridge_handlers.rs  lib.rs  process.rs
crates/loopal-agent-hub/: BUILD.bazel  Cargo.toml
crates/loopal-agent-hub/src/: agent_io.rs  connection_ops.rs  event_router.rs  hub.rs  hub_server.rs  hub_ui_client.rs  lib.rs  routing.rs  spawn_manager.rs  topology.rs  tui_relay.rs  types.rs  ui_dispatcher.rs  ui_relay.rs  ui_session.rs
crates/loopal-agent-hub/src/agent_registry/: completion.rs  mod.rs
crates/loopal-agent-hub/src/dispatch/: dispatch_handlers.rs  mod.rs  topology_handlers.rs  wait_handler.rs
crates/loopal-agent-hub/tests/: event_router_test.rs  suite.rs
crates/loopal-agent-hub/tests/suite/: advanced_scenarios_test.rs  collaboration_test.rs  completion_output_test.rs  dispatch_test.rs  e2e_bootstrap_test.rs  event_router_test.rs  hub_integration_test.rs  hub_lifecycle_test.rs  multi_agent_test.rs  race_condition_test.rs  relay_test.rs  spawn_lifecycle_test.rs  wait_nonblocking_test.rs
crates/loopal-agent-server/: BUILD.bazel  Cargo.toml
crates/loopal-agent-server/src/: agent_setup.rs  hub_frontend.rs  interrupt_filter.rs  ipc_frontend.rs  lib.rs  memory_adapter.rs  params.rs  server.rs  session_forward.rs  session_start.rs
crates/loopal-agent-server/tests/: suite.rs
crates/loopal-agent-server/tests/suite/: dispatch_loop_test.rs  hub_harness.rs  hub_interaction_edge_test.rs  interrupt_filter_test.rs  ipc_frontend_test.rs  observer_join_test.rs
crates/loopal-agent/src/: bridge.rs  config.rs  lib.rs  shared.rs  spawn.rs
crates/loopal-agent/src/router/: message_router.rs
crates/loopal-agent/src/tools/: agent.rs  channel.rs  completion.rs  mod.rs  send_message.rs  task.rs
crates/loopal-agent/tests/: router_observe_test.rs  router_test.rs  suite.rs  tool_channel_test.rs
crates/loopal-agent/tests/suite/: config_test.rs  registry_test.rs  router_channel_test.rs  task_store_test.rs  tool_channel_test.rs  tool_send_message_test.rs
crates/loopal-backend/: BUILD.bazel  Cargo.toml
crates/loopal-backend/src/: fs.rs  lib.rs  limits.rs  local.rs  net.rs  path.rs  search.rs  shell.rs
crates/loopal-backend/src/search/: binary.rs  glob.rs  grep.rs  grep_match.rs  mod.rs  walker.rs
crates/loopal-config/: BUILD.bazel  Cargo.toml
crates/loopal-config/src/: hook.rs  housekeeping.rs  layer.rs  lib.rs  loader.rs  locations.rs  pipeline.rs  plugin.rs  resolved.rs  resolver.rs  sandbox.rs  settings.rs
crates/loopal-config/src/skills/: mod.rs
crates/loopal-config/tests/: loader_unit_test.rs  suite.rs
crates/loopal-config/tests/suite/: config_test.rs  hook_test.rs  loader_instructions_test.rs  loader_settings_merge_test.rs  loader_settings_test.rs  locations_test.rs  plugin_test.rs  resolver_edge_test.rs  resolver_test.rs  skills_loader_test.rs  skills_parser_test.rs
crates/loopal-context/: BUILD.bazel  Cargo.toml
crates/loopal-context/src/: budget.rs  compaction.rs  degradation.rs  ingestion.rs  lib.rs  pipeline.rs  store.rs  system_prompt.rs  token_counter.rs
crates/loopal-context/src/middleware/: auto_compact.rs  context_guard.rs  message_size_guard.rs  mod.rs  price_limit.rs  smart_compact.rs  smart_compact_llm.rs  turn_limit.rs
crates/loopal-context/tests/: auto_compact_test.rs  compaction_test.rs  context_guard_edge_test.rs  context_guard_test.rs  message_size_guard_test.rs  pipeline_test.rs  price_limit_test.rs  smart_compact_test.rs  suite.rs  token_counter_test.rs
crates/loopal-context/tests/suite/: auto_compact_test.rs  compaction_pair_test.rs  compaction_test.rs  context_guard_edge_test.rs  context_guard_test.rs  degradation_test.rs  ingestion_test.rs  message_size_guard_test.rs  pipeline_test.rs  price_limit_test.rs  smart_compact_test.rs  store_test.rs  system_prompt_test.rs
crates/loopal-error/: BUILD.bazel  Cargo.toml
crates/loopal-error/src/: errors.rs  helpers.rs  io_error.rs  lib.rs
crates/loopal-error/tests/: error_conversion_test.rs  suite.rs
crates/loopal-error/tests/suite/: error_edge_test.rs  error_test.rs
crates/loopal-git/: BUILD.bazel  Cargo.toml
crates/loopal-hooks/: BUILD.bazel  Cargo.toml
crates/loopal-hooks/src/: registry.rs  runner.rs
crates/loopal-hooks/tests/: registry_test.rs  runner_test.rs  suite.rs
crates/loopal-ipc/: BUILD.bazel  Cargo.toml
crates/loopal-ipc/src/: connection.rs  duplex.rs  jsonrpc.rs  lib.rs  protocol.rs
crates/loopal-kernel/: BUILD.bazel  Cargo.toml
crates/loopal-kernel/src/: kernel.rs  lib.rs  provider_registry.rs  sampling.rs
crates/loopal-kernel/tests/: kernel_anthropic_test.rs  kernel_init_test.rs  kernel_openai_test.rs  suite.rs
crates/loopal-kernel/tests/suite/: kernel_anthropic_test.rs  (+2 more)
crates/loopal-mcp/: BUILD.bazel  Cargo.toml
crates/loopal-mcp/src/: client.rs  connection.rs  handler.rs  lib.rs  manager.rs  manager_query.rs  reconnect.rs  tool_adapter.rs  transport.rs  types.rs
crates/loopal-mcp/tests/: manager_test.rs  suite.rs
crates/loopal-memory/: BUILD.bazel  Cargo.toml
(+617 files in other folders)
