[package]
name = "loopal"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
resolver = "2"
members = [
    ".",
    "crates/loopal-error",
    "crates/loopal-message",
    "crates/loopal-protocol",
    "crates/loopal-tool-api",
    "crates/loopal-provider-api",
    "crates/loopal-config",
    "crates/loopal-storage",
    "crates/loopal-provider",
    "crates/tools/edit-core",
    "crates/tools/read",
    "crates/tools/write",
    "crates/tools/edit",
    "crates/tools/multi-edit",
    "crates/tools/apply-patch",
    "crates/tools/diff",
    "crates/tools/grep",
    "crates/tools/glob",
    "crates/tools/ls",
    "crates/tools/file-ops",
    "crates/tools/bash",
    "crates/tools/background",
    "crates/tools/fetch",
    "crates/tools/web-search",
    "crates/tools/ask-user",
    "crates/tools/plan-mode",
    "crates/tools/registry",
    "crates/loopal-mcp",
    "crates/loopal-hooks",
    "crates/loopal-context",
    "crates/loopal-kernel",
    "crates/loopal-runtime",
    "crates/loopal-sandbox",
    "crates/loopal-agent",
    "crates/loopal-session",
    "crates/loopal-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.28"

# File operations
globset = "0.4"
regex = "1"
walkdir = "2"

# MCP
rmcp = { version = "0.1", features = ["client", "transport-child-process"] }

# Utilities
dirs = "6"
indexmap = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio-util = "0.7"
pin-project-lite = "0.2"
unicode-width = "0.2"
textwrap = { version = "0.16", default-features = true }
pulldown-cmark = { version = "0.12", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = "0.5"
wiremock = "0.6"
html2text = "0.12"
pdf-extract = "0.7"
tiktoken-rs = "0.6"

# Workspace crates
loopal-error = { path = "crates/loopal-error" }
loopal-message = { path = "crates/loopal-message" }
loopal-protocol = { path = "crates/loopal-protocol" }
loopal-tool-api = { path = "crates/loopal-tool-api" }
loopal-provider-api = { path = "crates/loopal-provider-api" }
loopal-config = { path = "crates/loopal-config" }
loopal-storage = { path = "crates/loopal-storage" }
loopal-provider = { path = "crates/loopal-provider" }
loopal-edit-core = { path = "crates/tools/edit-core" }
loopal-tool-read = { path = "crates/tools/read" }
loopal-tool-write = { path = "crates/tools/write" }
loopal-tool-edit = { path = "crates/tools/edit" }
loopal-tool-multi-edit = { path = "crates/tools/multi-edit" }
loopal-tool-apply-patch = { path = "crates/tools/apply-patch" }
loopal-tool-diff = { path = "crates/tools/diff" }
loopal-tool-grep = { path = "crates/tools/grep" }
loopal-tool-glob = { path = "crates/tools/glob" }
loopal-tool-ls = { path = "crates/tools/ls" }
loopal-tool-file-ops = { path = "crates/tools/file-ops" }
loopal-tool-bash = { path = "crates/tools/bash" }
loopal-tool-background = { path = "crates/tools/background" }
loopal-tool-fetch = { path = "crates/tools/fetch" }
loopal-tool-web-search = { path = "crates/tools/web-search" }
loopal-tool-ask-user = { path = "crates/tools/ask-user" }
loopal-tool-plan-mode = { path = "crates/tools/plan-mode" }
loopal-tools = { path = "crates/tools/registry" }
loopal-mcp = { path = "crates/loopal-mcp" }
loopal-hooks = { path = "crates/loopal-hooks" }
loopal-context = { path = "crates/loopal-context" }
loopal-kernel = { path = "crates/loopal-kernel" }
loopal-runtime = { path = "crates/loopal-runtime" }
loopal-sandbox = { path = "crates/loopal-sandbox" }
loopal-agent = { path = "crates/loopal-agent" }
loopal-session = { path = "crates/loopal-session" }
loopal-tui = { path = "crates/loopal-tui" }

[[bin]]
name = "loopal"
path = "src/main.rs"

[dependencies]
loopal-message = { workspace = true }
loopal-protocol = { workspace = true }
loopal-tool-api = { workspace = true }
loopal-config = { workspace = true }
loopal-storage = { workspace = true }
loopal-provider = { workspace = true }
loopal-tools = { workspace = true }
loopal-mcp = { workspace = true }
loopal-hooks = { workspace = true }
loopal-context = { workspace = true }
loopal-kernel = { workspace = true }
loopal-runtime = { workspace = true }
loopal-agent = { workspace = true }
loopal-session = { workspace = true }
loopal-tui = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
