load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "loopal-acp",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/loopal-agent-hub",
        "//crates/loopal-ipc",
        "//crates/loopal-protocol",
        "@crates//:agent-client-protocol-schema",
        "@crates//:anyhow",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tracing",
        "@crates//:uuid",
    ],
)

rust_test(
    name = "loopal-acp_test",
    srcs = glob(["tests/**/*.rs"]),
    crate_root = "tests/suite.rs",
    edition = "2024",
    local = True,
    deps = [
        ":loopal-acp",
        "//crates/loopal-agent-hub",
        "//crates/loopal-agent-server",
        "//crates/loopal-error",
        "//crates/loopal-ipc",
        "//crates/loopal-provider-api",
        "//crates/loopal-test-support",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
)
