[package]
name = "loopal-acp"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
loopal-agent-client = { workspace = true }
loopal-config = { workspace = true }
loopal-ipc = { workspace = true }
loopal-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
loopal-agent-server = { workspace = true }
loopal-test-support = { workspace = true }
loopal-provider-api = { workspace = true }
loopal-error = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util"] }
