[package]
name = "loopal-agent-hub"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
loopal-agent-client = { workspace = true }
loopal-ipc = { workspace = true }
loopal-protocol = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
