[package]
name = "loopal-agent-server"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
loopal-error = { workspace = true }
loopal-ipc = { workspace = true }
loopal-protocol = { workspace = true }
loopal-message = { workspace = true }
loopal-config = { workspace = true }
loopal-kernel = { workspace = true }
loopal-runtime = { workspace = true }
loopal-context = { workspace = true }
loopal-agent = { workspace = true }
loopal-storage = { workspace = true }
loopal-tool-api = { workspace = true }
loopal-provider-api = { workspace = true }
loopal-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
loopal-agent-server = { workspace = true }
loopal-ipc = { workspace = true }
loopal-protocol = { workspace = true }
loopal-runtime = { workspace = true }
loopal-test-support = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util"] }
