load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "loopal-agent",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/loopal-agent-client",
        "//crates/loopal-config",
        "//crates/loopal-context",
        "//crates/loopal-error",
        "//crates/loopal-git",
        "//crates/loopal-ipc",
        "//crates/loopal-kernel",
        "//crates/loopal-memory",
        "//crates/loopal-message",
        "//crates/loopal-prompt",
        "//crates/loopal-prompt-system",
        "//crates/loopal-protocol",
        "//crates/loopal-provider-api",
        "//crates/loopal-runtime",
        "//crates/loopal-storage",
        "//crates/loopal-tool-api",
        "//crates/tools/process/background:loopal-tool-background",
        "@crates//:chrono",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tokio-util",
        "@crates//:tracing",
        "@crates//:uuid",
    ],
    proc_macro_deps = ["@crates//:async-trait"],
)

rust_test(
    name = "loopal-agent_test",
    srcs = glob(["tests/**/*.rs"]),
    crate_root = "tests/suite.rs",
    edition = "2024",
    local = True,
    data = ["//:loopal"],
    env = {"LOOPAL_BINARY": "$(rootpath //:loopal)"},
    deps = [
        ":loopal-agent",
        "//crates/loopal-agent-client",
        "//crates/loopal-agent-server",
        "//crates/loopal-backend",
        "//crates/loopal-error",
        "//crates/loopal-ipc",
        "//crates/loopal-protocol",
        "//crates/loopal-provider-api",
        "//crates/loopal-test-support",
        "@crates//:serde_json",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tokio-util",
    ],
)
