[package]
name = "loopal-agent"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
loopal-error = { workspace = true }
loopal-message = { workspace = true }
loopal-protocol = { workspace = true }
loopal-tool-api = { workspace = true }
loopal-config = { workspace = true }
loopal-runtime = { workspace = true }
loopal-kernel = { workspace = true }
loopal-context = { workspace = true }
loopal-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
loopal-backend = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
