[package]
name = "loopal-agent"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
loopal-error = { workspace = true }
loopal-ipc = { workspace = true }
loopal-agent-client = { workspace = true }
loopal-message = { workspace = true }
loopal-protocol = { workspace = true }
loopal-tool-api = { workspace = true }
loopal-config = { workspace = true }
loopal-runtime = { workspace = true }
loopal-provider-api = { workspace = true }
loopal-kernel = { workspace = true }
loopal-context = { workspace = true }
loopal-prompt = { workspace = true }
loopal-prompt-system = { workspace = true }
loopal-storage = { workspace = true }
loopal-git = { workspace = true }
loopal-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
loopal-agent-client = { workspace = true }
loopal-agent-server = { workspace = true }
loopal-backend = { workspace = true }
loopal-error = { workspace = true }
loopal-ipc = { workspace = true }
loopal-protocol = { workspace = true }
loopal-provider-api = { workspace = true }
loopal-test-support = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
tokio-util = { workspace = true }
