[package]
name = "loopal-backend"
version.workspace = true
edition.workspace = true

[lib]
doctest = false
test = false

[dependencies]
loopal-tool-api = { workspace = true }
loopal-error = { workspace = true }
loopal-config = { workspace = true }
loopal-sandbox = { workspace = true }
loopal-edit-core = { workspace = true }
loopal-tool-background = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
