[package]
name = "loopal-context"
version.workspace = true
edition.workspace = true

[dependencies]
loopal-error = { workspace = true }
loopal-message = { workspace = true }
loopal-tool-api = { workspace = true }
loopal-provider-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
