[package]
name = "loopal-context"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[lib]
doctest = false
test = false

[dependencies]
loopal-error = { workspace = true }
loopal-message = { workspace = true }
loopal-tool-api = { workspace = true }
loopal-provider-api = { workspace = true }
loopal-prompt = { workspace = true }
loopal-prompt-system = { workspace = true }
loopal-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tiktoken-rs = { workspace = true }
